--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/ui.effects.css">
     <script>
       tailwind.config = {
         theme: {
@@ -24,105 +25,31 @@
             letterSpacing: {
               tighter: '-0.05em',
               tightest: '-0.1em'
-            },
-            animation: {
-              'sweep': 'sweep 3s ease-in-out infinite',
-              'brand-glow': 'brand-glow 8s ease-in-out infinite',
-            },
-            keyframes: {
-              sweep: {
-                '0%': { transform: 'translateX(-100%) skewX(-15deg)' },
-                '100%': { transform: 'translateX(200%) skewX(-15deg)' }
-              },
-              'brand-glow': {
-                '0%, 100%': { opacity: 0.8 },
-                '50%': { opacity: 1 }
-              }
             }
           }
         }
       }
     </script>
-    <style>
-      body {
-        background-color: #F5F4F2;
-        color: #111111;
-        -webkit-font-smoothing: antialiased;
-        overflow-x: hidden;
+    <script type="importmap">
+    {
+      "imports": {
+        "react/": "https://esm.sh/react@^19.2.3/",
+        "react": "https://esm.sh/react@^19.2.3",
+        "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+        "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+        "vite": "https://esm.sh/vite@^7.3.0",
+        "framer-motion": "https://esm.sh/framer-motion@^12.24.0",
+        "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+        "react-router-dom": "https://esm.sh/react-router-dom@^7.11.0",
+        "firebase/": "https://esm.sh/firebase@^12.7.0/"
       }
-
-      /* Noise Texture Overlay */
-      .noise-overlay {
-        position: fixed;
-        top: 0; left: 0; width: 100%; height: 100%;
-        background: url("https://grainy-gradients.vercel.app/noise.svg");
-        opacity: 0.05;
-        pointer-events: none;
-        z-index: 9999;
-      }
-
-      /* Global Vignette */
-      .vignette {
-        position: fixed;
-        inset: 0;
-        box-shadow: inset 0 0 150px rgba(0,0,0,0.03);
-        pointer-events: none;
-        z-index: 9998;
-      }
-
-      /* Glassmorphism Utilities */
-      .glass {
-        background: rgba(245, 244, 242, 0.4);
-        backdrop-filter: blur(8px);
-        -webkit-backdrop-filter: blur(8px);
-        border: 1px solid rgba(17, 17, 17, 0.05);
-      }
-
-      /* Animated Gradient Text for Brand */
-      .brand-gradient {
-        background: linear-gradient(
-          to right,
-          #111111 20%,
-          #444444 40%,
-          #444444 60%,
-          #111111 80%
-        );
-        background-size: 200% auto;
-        color: #000;
-        background-clip: text;
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        animation: brand-glow 8s linear infinite;
-      }
-
-      ::-webkit-scrollbar {
-        width: 4px;
-      }
-      ::-webkit-scrollbar-track {
-        background: #F5F4F2;
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #111111;
-      }
-    </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "vite": "https://esm.sh/vite@^7.3.0",
-    "framer-motion": "https://esm.sh/framer-motion@^12.24.0",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "react-router-dom": "https://esm.sh/react-router-dom@^7.11.0",
-    "firebase/": "https://esm.sh/firebase@^12.7.0/"
-  }
-}
-</script>
-</head>
+    }
+    </script>
+  </head>
   <body>
+    <!-- Global noise texture for tactile editorial feel -->
     <div class="noise-overlay"></div>
+    <!-- Subtle vignette for focal depth -->
     <div class="vignette"></div>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
